--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=vet-catalog-service
-server.port=8083
+server.port=${PORT:8080}
 
 # Database
 spring.datasource.url=jdbc:postgresql://ep-soft-frost-adz62xfd-pooler.c-2.us-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_r4QCaSiVzg5k&sslmode=require&channelBinding=require
 spring.jpa.hibernate.ddl-auto=update
 
 # Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=https://vet-discovery-service-7i52.onrender.com/eureka/
 eureka.client.register-with-eureka=true
 spring.graphql.graphiql.enabled=true
 spring.graphql.graphiql.path=/graphiql
